[package]
name = "kubessh"
version = "0.1.0"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
clap = "2.33"
structopt = "0.3.8"
handlebars = "3.0.1"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
run_script = "0.6.2"
sys-info = "0.5.9"

[dependencies]
structopt = "0.3.8"
dirs = "2.0.2"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_debug"] }
serde = "1.0.104"
serde_derive = "1.0.104"
dialoguer = "0.5.0"
console = "0.9.2"
regex = "1.3.4"
handlebars = "3.0.1"
run_script = "0.6.2"
sys-info = "0.5.9"
